<resources>
    <string name="app_name">My Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="name_spotify_streamer">Spotify Streamer</string>
    <string name="name_scores_app">Scores App</string>
    <string name="name_library_app">Library App</string>
    <string name="name_build_it_bigger">Build It Bigger</string>
    <string name="name_bacon_reader">XYZ Reader</string>
    <string name="name_capstone_my_own_app">Capstone: My Own App</string>
</resources>