<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        android:textColor="#424242"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="20dp"/>
    <android.support.v7.widget.CardView
        android:id="@+id/container_spotify_streamer"
        android:layout_below="@+id/title"
        android:style="@style/NormalContainer">
        <Button
            android:id="@+id/button_spotify_streamer"
            android:style="@style/NormalButton"
            android:text="@string/name_spotify_streamer"
            android:onClick="showMessage"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/container_scores_app"
        android:layout_below="@+id/container_spotify_streamer"
        android:style="@style/NormalContainer">
        <Button
            android:id="@+id/button_scores_app"
            android:style="@style/NormalButton"
            android:text="@string/name_scores_app"
            android:onClick="showMessage"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/container_library_app"
        android:layout_below="@+id/container_scores_app"
        android:style="@style/NormalContainer">
        <Button
            android:id="@+id/button_library_app"
            style="@style/NormalButton"
            android:text="@string/name_library_app"
            android:onClick="showMessage"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/container_build_it_bigger"
        android:layout_below="@+id/container_library_app"
        android:style="@style/NormalContainer">
        <Button
            android:id="@+id/button_build_it_bigger"
            style="@style/NormalButton"
            android:text="@string/name_build_it_bigger"
            android:onClick="showMessage"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/container_bacon_reader"
        android:layout_below="@+id/container_build_it_bigger"
        android:style="@style/NormalContainer">
        <Button
            android:id="@+id/button_bacon_reader"
            style="@style/NormalButton"
            android:text="@string/name_bacon_reader"
            android:onClick="showMessage"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/container_capston_my_own_app"
        android:layout_below="@+id/container_bacon_reader"
        android:style="@style/NormalContainer">
        <Button
            android:id="@+id/button_capston_my_own_app"
            style="@style/NormalButton.ImportantButton"
            android:text="@string/name_capstone_my_own_app"
            android:onClick="showMessage"/>
    </android.support.v7.widget.CardView>
</RelativeLayout>
